# tree-sitter-langium

./: .gitignore  Cargo.toml  Makefile  README.md  binding.gyp  bun.lockb  dsl.d.ts  grammar.d.ts  grammar.js  jsconfig.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: abstract_terminal.txt  abstract_terminal_expression.txt  action.txt  action_expression.txt  assignable_terminal.txt  assignable_terminal_expression.txt  assignment.txt  assignment_expression.txt  comment.txt  condition.txt  condition_expression.txt  definition.txt  definition_expression.txt  grammar.txt  grammar_statement.txt  import.txt  import_statement.txt  interface.txt  parser_rule.txt  parser_rule_statement.txt  terminal_rule.txt  terminal_rule_statement.txt  terminal_token_element.txt  type.txt  type_definition.txt  value_literal.txt
queries/langium/: highlights.scm
